test/error/parsing_files/parenthesis1.err
File "parsing_files/parenthesis1.st", line 1, characters 12-14:
1 | f (x : int := x.
               ^^
Error: Syntax error.
Hint: Parenthesis not closed.
